--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
                 <ul>
                     <li>
                         <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
-                        <span class="text">Phone</span>
+                        <a href="tel:+375297182977" class="side_links" target="_blank">Phone</a>
                         <!-- +375(29)718-29-77 -->
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
-                        <span class="text">E-mail</span>
+                        <a href="mailto:seerichnick@gmail.com" class="side_links">E-mail</a>
                         <!-- seerichnick@gmail.com -->
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-telegram" aria-hidden="true"></i></span>
-                        <span class="text">Telegram</span>
+                        <a href="https://t.me/seerichnick" class="side_links" target="_blank">Telegram</a>
                     </li>
                 </ul>
             </div>
@@ -49,23 +49,23 @@
                 <ul>
                     <li>
                         <span class="icon"><i class="fa fa-html5" aria-hidden="true"></i></span>
-                        <span class="text">HTML5, CSS</span>
+                        <span class="side_links">HTML5, CSS</span>
                     </li>
                     <li>
                         <span class="icon"><i class="fab fa-js"></i></span>
-                        <span class="text">JavaScript Basics</span>
+                        <span class="side_links">JavaScript Basics</span>
                     </li>
                     <li>
                         <span class="icon"><i class="fab fa-github"></i></span>
-                        <span class="text">Git, GitHub</span>
+                        <span class="side_links">Git, GitHub</span>
                     </li>
                     <li>
                         <span class="icon"><i class="fab fa-adobe"></i></span>
-                        <span class="text">Photoshop, Illustrator</span>
+                        <span class="side_links">Photoshop, Illustrator</span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-code" aria-hidden="true"></i></span>
-                        <span class="text">VS Code</span>
+                        <span class="side_links">VS Code</span>
                     </li>
                 </ul>
             </div>    
@@ -74,15 +74,15 @@
                 <ul>
                     <li>
                         <span class="icon"><i class="fas fa-globe-asia"></i></span>
-                        <span class="text">Russian</span>
+                        <span class="side_links">Russian</span>
                     </li>
                     <li>
                         <span class="icon"><i class="fas fa-globe-europe"></i></span>
-                        <span class="text">Belarusian</span>
+                        <span class="side_links">Belarusian</span>
                     </li>
                     <li>
                         <span class="icon"><i class="fas fa-globe-americas"></i></span>
-                        <span class="text">English</span>
+                        <span class="side_links">English</span>
                     </li>
                 </ul>
             </div>
